Wrap background video in row and set h1 to correct size

--- a/css/master.css
+++ b/css/master.css
@@ -9,7 +9,7 @@ a {
   text-decoration: none;
 }
 
-h1 {
+h1.title {
   font-size: 80px;
   font-weight: bold;
 }
